# ingester

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tasks.py
src/ingester/consumer/: cli.py
src/ingester/logging/: __init__.py
src/ingester/messages/: __init__.py
src/ingester/producer/: cli.py
